feat(pev): PevTrace.Planned NodeSnapshot 投影 + dispatch 承重硬化
治 observability→agent 包依赖 gap：PevTrace.Planned 原包装
agent.PevComponents.Plan（agent 包），违背 observability→kernel 单向承诺。
改为 Planned(goal, List<NodeSnapshot>) 本地投影 record（零 agent import）；
ArchUnit 4 规则 CI 强制 kernel/observability/agent/rail 包依赖方向；
recordPlanned 在 initial/LocalReplan/GlobalReplan 三点记录 plan 演进。

dispatch 承重硬化（4-lens 对抗审核三轮收敛）：
- INCONCLUSIVE 终态补 terminal[0]=true，闭合 terminalReason↔terminal 不变式
- dispatchReplanAction instanceof 链加语言约束注释（Java 17 无 sealed pattern
  switch）+ 运行期穷尽守卫测试 replanActionSealedVariantsSnapshot

文档：新增 PEV L1/L2/FEAT 架构文档；4/5 Phase 包装 kernel sealed，
Planned 用 NodeSnapshot 投影。

验证：42 测试绿；真 LLM e2e 矩阵（glm-5.2/deepseek-v4-pro/qwen3.6-27b ×
thinking on/off）数据通道全通过。